Add start, prestart and security check

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
+    "prestart": "npm-run-all --parallel security-check open:src",
+    "open:src": "node buildScripts/startMessage.js",
+    "start": "node buildScripts/srcServer.js",
+    "security-check": "nsp check"
   },
   "author": "Shay Hall",
   "license": "MIT",
